--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="css/style.css">
   
   <title>Presentación - Nelson Osnayo</title>
+  <!-- AUTOR -->
+  <meta name="author" content="NO4v1" />
+  <!-- FAVICON -->
+  <link rel="icon" type="image/x-icon" href="img/no.png" />
 </head>
 <body>
   <div class="container">
@@ -41,7 +45,7 @@
       <h2>¿Porque Desarrollo Web?</h2>
         <p class="texto"> Desde mis inicio en el area de la informática, e sido constante en el aprendizaje de desarrollo de aplicaciones web. queriendo siempre tener el habito de incluir nuevas tecnología en el desarrollo de soluciones.
         </p>
-        <img class="gif" src="\img\loandig-cargando.gif">
+        <img class="gif" src="img\loandig-cargando.gif">
         
     </div>
     <div class="card">
